--- a/Entrega_grupo_05/styles.css
+++ b/Entrega_grupo_05/styles.css
@@ -6,22 +6,17 @@
 */
 /*FLEXBOX*/
 .navbar-collapse {
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content:space-between;
-    
-
 }
 
-.carousel-inner img {
+/*CAROUSEL*/  
+
+.carousel-inner img{
     width: 100%;
-    max-height: 360px;
-    
-
-
+    max-height: 460px;
 }
-
-
 /************HERO***********/
 
 /*.hero{
@@ -37,6 +32,32 @@
     padding: 80px;
 }
 
+header{
+    width: 100%;
+    position: fixed;
+    z-index: 9;
+}
+
+header .navbar-collapse a{ /*Gracias a esto se puede cambiar*/
+    position: relative; /*Gracias a esto se puede cambiar la posición a las a de la nav*/
+}
+
+.carousel{
+    margin-top: 50px;
+}
+
+.hero{
+    width: 100%;
+    height: 550px;
+}
+
+.article-cel{
+    margin-top: 170px;
+}
+
+.form{
+    margin-top: 150px;
+}
 
 
 /*FIN HERO*/
@@ -49,8 +70,8 @@ h1{
     font-family: 'Inter', sans-serif;
     font-size: 40px;
     color: rgba(39, 37, 37, 0.986);
-    
 }
+
 /************* MEDIA QUERIES *************/
 @media (max-width: 992px) {
     h1 {
@@ -68,6 +89,16 @@ h1{
         padding: 80px;
     }
     
+}
+
+@media (max-width: 400px) {
+    .foto{
+        width: 100%;
+    }
+
+    .hero section h4 {
+        font-size: 6px
+    } 
 }
 
 
