--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,11 @@ header .navbar-collapse a{ /*Gracias a esto se puede cambiar*/
     margin-top: 50px;
 }
 
+.carousel-inner img {
+    width: 100%;
+    max-height: 460px;
+}
+
 .hero{
     width: 100%;
     height: 400px;
